--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
+    "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
     "start": "ts-node src/index.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "test": "cross-env NODE_ENV=test jest"
@@ -26,7 +26,7 @@
     "@types/cors": "^2.8.9",
     "@types/express": "4.17.3",
     "@types/express-serve-static-core": "4.17.2",
-    "@types/jest": "^25.2.1",
+    "@types/jest": "^26.0.19",
     "@types/multer": "^1.4.2",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
